<resources>
    <string name="app_name">Practices</string>
    <string name="action_settings">Settings</string>
    <string name="pinned_section_listview">Pinned Section ListView</string>
    <string name="test_ormlite">Test ORMLite</string>
    <string name="test_count_down_timer">Test Count Down Timer</string>
    <string name="delete_contact">Delete</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="loading">loading</string>

</resources>
