<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_delete_white_36dp"
        android:title="@string/delete_contact"
        android:visible="false"/>

    <item
        android:id="@+id/action_show_pinned_section_list_view"
        android:orderInCategory="5"
        app:showAsAction="never"
        android:title="@string/pinned_section_listview"/>

    <item
        android:id="@+id/action_show_test_ormlite"
        android:orderInCategory="6"
        app:showAsAction="never"
        android:title="@string/test_ormlite"/>

    <item
        android:id="@+id/action_show_count_down_timer"
        android:orderInCategory="7"
        app:showAsAction="never"
        android:title="@string/test_count_down_timer"/>
</menu>
